fl_dll/library.h

struct PassingData
{
    int s_int;
    long long s_long;
    float s_float;
    double s_double;
};
struct PassingStructs
{
    struct PassingData s_simple;
    struct PassingData array_data[3];
    int countofPtrs;
    struct PassingData** s_ptrtoptr;
};
void* PassPointers(void* hMem);
extern void setAnError(int errval);
extern double passStructArrBlock(struct PassingData data[], int count, int multiply);
extern double passStructArrPtr(struct PassingData** data, int count, int multiply);
extern double passStructOfStructs(struct PassingStructs* data);