src/test/java/jpassport/test/extracted/library_h.java


    /**
     * {@snippet lang=c :
     * byte []PassPointers(byte []hMem)
     * }
     */
    public static MemorySegment PassPointers(MemorySegment hMem) {
        var mh$ = PassPointers.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("PassPointers", hMem);
            }
            return (MemorySegment)mh$.invokeExact(hMem);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class setAnError {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            library_h.C_INT
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("setAnError");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void setAnError(int errval)
     * }
     */
    public static FunctionDescriptor setAnError$descriptor() {
        return setAnError.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void setAnError(int errval)
     * }
     */
    public static MethodHandle setAnError$handle() {
        return setAnError.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void setAnError(int errval)
     * }
     */
    public static MemorySegment setAnError$address() {
        return setAnError.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void setAnError(int errval)
     * }
     */
    public static void setAnError(int errval) {
        var mh$ = setAnError.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("setAnError", errval);
            }
            mh$.invokeExact(errval);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class passStructArrBlock {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            library_h.C_DOUBLE,
            library_h.C_POINTER,
            library_h.C_INT,
            library_h.C_INT
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("passStructArrBlock");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern double passStructArrBlock(struct PassingData data[], int count, int multiply)
     * }
     */
    public static FunctionDescriptor passStructArrBlock$descriptor() {
        return passStructArrBlock.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern double passStructArrBlock(struct PassingData data[], int count, int multiply)
     * }
     */
    public static MethodHandle passStructArrBlock$handle() {
        return passStructArrBlock.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern double passStructArrBlock(struct PassingData data[], int count, int multiply)
     * }
     */
    public static MemorySegment passStructArrBlock$address() {
        return passStructArrBlock.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern double passStructArrBlock(struct PassingData data[], int count, int multiply)
     * }
     */
    public static double passStructArrBlock(MemorySegment data, int count, int multiply) {
        var mh$ = passStructArrBlock.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("passStructArrBlock", data, count, multiply);
            }
            return (double)mh$.invokeExact(data, count, multiply);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class passStructArrPtr {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            library_h.C_DOUBLE,
            library_h.C_POINTER,
            library_h.C_INT,
            library_h.C_INT
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("passStructArrPtr");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern double passStructArrPtr(struct PassingData **data, int count, int multiply)
     * }
     */
    public static FunctionDescriptor passStructArrPtr$descriptor() {
        return passStructArrPtr.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern double passStructArrPtr(struct PassingData **data, int count, int multiply)
     * }
     */
    public static MethodHandle passStructArrPtr$handle() {
        return passStructArrPtr.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern double passStructArrPtr(struct PassingData **data, int count, int multiply)
     * }
     */
    public static MemorySegment passStructArrPtr$address() {
        return passStructArrPtr.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern double passStructArrPtr(struct PassingData **data, int count, int multiply)
     * }
     */
    public static double passStructArrPtr(MemorySegment data, int count, int multiply) {
        var mh$ = passStructArrPtr.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("passStructArrPtr", data, count, multiply);
            }
            return (double)mh$.invokeExact(data, count, multiply);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class passStructOfStructs {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            library_h.C_DOUBLE,
            library_h.C_POINTER
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("passStructOfStructs");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern double passStructOfStructs(struct PassingStructs *data)
     * }
     */
    public static FunctionDescriptor passStructOfStructs$descriptor() {
        return passStructOfStructs.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern double passStructOfStructs(struct PassingStructs *data)
     * }
     */
    public static MethodHandle passStructOfStructs$handle() {
        return passStructOfStructs.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern double passStructOfStructs(struct PassingStructs *data)
     * }
     */
    public static MemorySegment passStructOfStructs$address() {
        return passStructOfStructs.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern double passStructOfStructs(struct PassingStructs *data)
     * }
     */
    public static double passStructOfStructs(MemorySegment data) {
        var mh$ = passStructOfStructs.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("passStructOfStructs", data);
            }
            return (double)mh$.invokeExact(data);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
}

